# PDF-Processing

./: .gitignore  README.md  create_table.py  main.py  pdf_extraction.ipynb  pdf_extraction.py  pyproject.toml  raster_pdf.ipynb  raster_pdf.py  vectorpdf_canvas.ipynb  vectorpdf_canvas.py  vectorpdf_platypus.ipynb  vectorpdf_platypus.py
notebook/: tables.ipynb
tutorials/: .gitignore  PLAN.md  README.md
tutorials/01-tables-simple-vs-complex/: README.md  extract_tables.py  generate_tables_pdf.py  test_tutorial1.py
tutorials/02-pdf-to-markdown/: README.md  pdf_to_markdown.py  test_tutorial2.py
tutorials/03-chunking-strategies/: .gitignore  README.md  chunking_strategies.py  generate_financial_report.py  generate_pdfs.py  generate_permit_matrix.py  generate_technical_manual.py  generate_textbook.py  generate_zoning_ordinance.py  pdf_to_markdown.py  run_all.py  test_tutorial3.py
tutorials/04-debugging/: README.md  debug_target.py  findings.md
tutorials/05-embeddings-math/: .gitignore  02_toy_embedding.py  03_real_embeddings.py  README.md  _01_math_foundations.py  math_foundations.py  test_tutorial5.py
tutorials/06-vector-store/: Dockerfile  README.md  docker-compose.yml  schema.sql  search.py  store_embeddings.py  test_tutorial6.py
tutorials/07-basic-rag/: README.md  llm_client.py  rag_pipeline.py  test_tutorial7.py
tutorials/07-local-llm/: README.md
tutorials/08-basic-rag/: README.md  demo.py  llm_client.py  prompts.py  rag_pipeline.py  test_tutorial7.py  test_tutorial8.py
tutorials/08-evaluation/: README.md  build_eval_set.py  eval_generation.py  (+1 more)
(+32 files in other folders)
