[project]
name = "day1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "img2pdf>=0.6.3",
    "ipykernel>=7.2.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "reportlab>=4.5.1",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
